# logitech-ghub-api-extender

./: .gitignore  CMakeLists.txt  build.bat  readme.md
.github/workflows/: build-tags.yml  cmake-single-platform.yml  prerelease-dev-build.yml
src/app/: main.cpp
src/lib/: LuaVM.hpp  PatternScanner.h  main.cpp
src/lib/features/: MessageBox.hpp  luaprint.hpp  test.hpp
src/lib/hooks/: LuaVMInitializer.cpp  LuaVMInitializer.h
src/lib/lua/: lua.c
src/lib/sdk/: LuaVirtualMachine.h  lghub_agent.h
